--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,14 @@ dd {
 .moon {
 	text-align:center;
 	background-color:lightgrey;
+
 }
+
+/*EXPLORATION PAGE*/
+
+	.explore {
+		background-color:lightgrey;
+	}
 
 /*SMALL SCREEN*/
 
@@ -112,5 +119,11 @@ dd {
 	ul {
 		text-align:center;
 	}
+
+}
+
+@media only screen and (min-width:52.500em) {
+
+
 
 }
