Started Module Stylesheet

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,13 @@ nav a {
 	background-color: darkgrey;
 }
 
+/*DISCOVERY OF VENUS MOONS*/
+
+.discovery {
+	background-color:lightgrey;
+}
+
+
 /*Characteristics*/
 
 dd {
